Adicionado tag <a>ancora</a>

--- a/curso_html.html
+++ b/curso_html.html
@@ -6,7 +6,7 @@
     <title>Curso HTML AlgarWorks</title>
 </head>
 <body>
-    <h1>Como evitar redeploy em projetos Java? Conheça o JRebel</h1>
+    <h1>Como evitar redeploy em projetos Java? Conheça o <a href="http://www.jrebel.com" target="_blank">JRebel</a></h1>
     <img src="img/jrebel.png" alt="JRebel">
     <p>Será que é possível evitar o <mark>redeploy</mark> em projetos Java ao alterar ou adicionar classes e arquivos de
         configurações?</p>
@@ -15,7 +15,7 @@
     <h2>JRebel: a solução</h2>
     <p>Com JRebel <em>isso é</em> possível. Você pode trabalhar em projetos Java com muito <strong>mais produtividade</strong></p>
     <h3>Download</h3>
-    <p>Para fazer download, acesse a página do JRebel e faça o seu cadastro.</p>
+    <p>Para fazer download, acesse a página do JRebel e faça o seu <a href="curso.html" target="_blank">cadastro</a> .</p>
 
 </body>
 </html>
